force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/Approval_Amend_Renwal_App_Data_Sync__mdt.object-meta.xml
<CustomObject>
    <label>Approval/Amend/Renwal App Data Sync</label>
    <pluralLabel>Approval/Amend/Renwal App Data Sync</pluralLabel>
</CustomObject>