force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Application_Specification_to_Consider__c.field-meta.xml
<CustomField>
    <fullName>Application_Specification_to_Consider__c</fullName>
    <description>List of Application Specification that we need to consider while cloning data to actual records</description>
    <label>Application Specification to Consider</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>