force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Child_Relationship_Field_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Field_Name_1__c</fullName>
    <label>Child Relationship Field Name 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>