force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Facility_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Application_Type__c</fullName>
    <label>Facility/Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Care Center</fullName>
                <default>true</default>
                <label>Child Care Center</label>
            </value>
            <value>
                <fullName>Group Home Child Care</fullName>
            </value>
            <value>
                <fullName>Family Home</fullName>
            </value>
            <value>
                <fullName>Friend, Family, Neighbor (FFN) Provider</fullName>
            </value>
            <value>
                <fullName>Relative Care Exempt (RCE) Provider</fullName>
            </value>
            <value>
                <fullName>School Age/ Drop In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>