force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>