force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>