force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Sync_Object_2__c.field-meta.xml
<CustomField>
    <fullName>Sync_Object_2__c</fullName>
    <label>Sync Object 2</label>
    <referenceTo>CC_DataSyncObjectMapping__mdt</referenceTo>
    <relationshipLabel>Approval/Amend/Renwal App Data Sync (Sync Objects 2)</relationshipLabel>
    <relationshipName>Approval_Amend_Renwal_App_Data_Sync1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>