force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Sync_Object_3__c.field-meta.xml
<CustomField>
    <fullName>Sync_Object_3__c</fullName>
    <label>Sync Object 3</label>
    <referenceTo>CC_DataSyncObjectMapping__mdt</referenceTo>
    <relationshipLabel>Approval/Amend/Renwal App Data Sync (Sync Object 3)</relationshipLabel>
    <relationshipName>Approval_Amend_Renwal_App_Data_Sync2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>