force-app/main/default/objects/Approval_Amend_Renwal_App_Data_Sync__mdt/fields/Sync_Object__c.field-meta.xml
<CustomField>
    <fullName>Sync_Object__c</fullName>
    <label>Sync Object</label>
    <referenceTo>CC_DataSyncObjectMapping__mdt</referenceTo>
    <relationshipLabel>Approval/Amend/Renwal App Data Sync</relationshipLabel>
    <relationshipName>Approval_Amend_Renwal_App_Data_Sync</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>